# Code

./: .gitignore  CMakeLists.txt  README.md  build_sln.bat  build_slnx.bat  install_framework.bat
build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  OpenGLWorld.sln  OpenGLWorld.slnx  OpenGLWorld.vcxproj  OpenGLWorld.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_vs/OpenGLWorld.dir/Release/: OpenGLWorld.exe.recipe
build_vs/OpenGLWorld.dir/Release/OpenGLWorld.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_vs/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_vs/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
build_vs/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_vs/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
src/: main.cpp
