cmake_minimum_required(VERSION 3.24)
project(OpenGLWorld LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
include(FetchContent)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
FetchContent_Declare(glfw GIT_REPOSITORY https://github.com/glfw/glfw.git GIT_TAG 3.4 GIT_SHALLOW TRUE)
FetchContent_MakeAvailable(glfw)
find_package(OpenGL REQUIRED)
add_executable(OpenGLWorld src/main.cpp)
target_link_libraries(OpenGLWorld PRIVATE glfw OpenGL::GL)
if(MSVC)
target_compile_options(OpenGLWorld PRIVATE /W4 /permissive-)
else()
target_compile_options(OpenGLWorld PRIVATE -Wall -Wextra -pedantic)
endif()
